k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hackathon-ingress
  namespace:  hackathon
  annotations:
       ingress.kubernetes.io/rewrite-target: /
  
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: backend-service
          servicePort: 9090

      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 8080
